force-app/main/default/objects/Package__c/fields/Dimension__c.field-meta.xml
<CustomField>
    <fullName>Dimension__c</fullName>
    <description>That dimension is calculated by mltiplication of width length and height of the package in metrecube units.</description>
    <formula>Package_Heigth__c  *  Package_Weidth__c  *  Package_Lenght__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimension (m³)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>