force-app/main/default/objects/Package__c/fields/Package_Heigth__c.field-meta.xml
<CustomField>
    <fullName>Package_Heigth__c</fullName>
    <label>Package Height (m)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>