force-app/main/default/objects/Package__c/fields/Package_Status__c.field-meta.xml
<CustomField>
    <fullName>Package_Status__c</fullName>
    <label>Package Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In-Transit</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>