force-app/main/default/objects/Package__c/fields/Weight_KG__c.field-meta.xml
<CustomField>
    <fullName>Weight_KG__c</fullName>
    <label>Weight (kg)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>