force-app/main/default/objects/Package__c/validationRules/dimensionValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>dimensionValidation</fullName>
    <active>true</active>
    <errorConditionFormula>(Package_Heigth__c  &lt;= 0 ) &amp;&amp;  (Package_Lenght__c   &lt;=  0 )  &amp;&amp; (Package_Weidth__c  &lt;= 0)</errorConditionFormula>
    <errorMessage>Dimension of the package cannot be less or equal to 0.</errorMessage>
</ValidationRule>