force-app/main/default/objects/Package__c/validationRules/weightValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>weightValidation</fullName>
    <active>true</active>
    <description>The weight of a package cannot be less or equal to 0.</description>
    <errorConditionFormula>Weight_KG__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Weight_KG__c</errorDisplayField>
    <errorMessage>The weight of a package cannot be less or equal to 0.</errorMessage>
</ValidationRule>