force-app/main/default/objects/Package__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dimension__c</columns>
    <columns>Package_Heigth__c</columns>
    <columns>Package_Lenght__c</columns>
    <columns>Package_Status__c</columns>
    <columns>Package_Weidth__c</columns>
    <columns>Shipment__c</columns>
    <columns>Weight_KG__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>